# IRP

./: .gitignore  Dockerfile  MITRE_INTEGRATION_IMPROVEMENTS.md  README.md  docker-compose.yml  docker-entrypoint.sh  documentation.md  init_data.sh  mitre_flow_demo.py  nginx.conf  pyproject.toml  refatoracao.md  refatoracao_checklist.md  test_api.py  test_mitre_integration.py  test_mitre_query.py  test_mitre_sync.py
api/: admin.py  apps.py  audit_views.py  misp_views.py  models.py  permissions.py  serializers.py  services.py  signals.py  tasks.py  timeline_views.py  urls.py  views.py
api/management/commands/: calculate_metrics.py  create_default_metrics.py  create_default_notification_events.py  initialize_system.py
api/migrations/: 0001_initial.py  0002_alertseverity_caseseverity_observabletype_paplevel_and_more.py  0003_mitretactic_kbcategory_kbarticle_mitretechnique_and_more.py  0004_metric_notificationevent_dashboard_dashboardwidget_and_more.py  0005_mispinstance_mispimport_mispexport_reporttemplate_and_more.py  0006_alter_auditlog_action_type_alter_auditlog_entity_type.py  0007_add_audit_permissions.py
api/services/: misp_service.py  report_service.py
core/: celery.py  celery_beat_config.py  settings.py  urls.py
docs/: README.md  guia_de_uso.md  inicializacao_do_sistema.md
irp/accounts/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
irp/alerts/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
irp/audit/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
irp/cases/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
irp/common/: admin.py  apps.py  audit.py  consumers.py  middleware.py  models.py  permissions.py  routing.py  utils.py  websocket.py
irp/integrations/: __init__.py  apps.py
irp/knowledge_base/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
irp/metrics/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
irp/mitre/: README.md  admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
irp/notifications/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
irp/observables/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
irp/reports/: README.md  __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
irp/timeline/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
(+34 files in other folders)
