[project]
name = "django-api"
version = "0.1.0"
description = "Django API project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.8.1",
    "django==5.2.1",
    "djangorestframework==3.16.0",
    "drf-nested-routers==0.93.4",
    "gunicorn>=23.0.0",
    "psycopg2-binary==2.9.10",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
# Compatibility with uv

[tool.uv.pip]
link-mode = "copy" 
