[project]
name = "django-api"
version = "0.1.0"
description = "Django API project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.8.1",
    "django==5.2.1",
    "djangorestframework==3.16.0",
    "drf-nested-routers==0.93.4",
    "drf-spectacular>=0.28.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary==2.9.10",
    "requests>=2.32.3",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
    "jinja2>=3.1.6",
    "celery>=5.3.6",
    "redis>=5.0.2",
    "django-celery-beat>=2.5.0",
    "django-celery-results>=2.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
# Compatibility with uv

[tool.uv.pip]
link-mode = "copy"


